# logreview

./: .gitignore  Error Codes.xlsx  README.md  pyproject.toml  requirements.txt  setup.cfg  unpack.py
configs/: logreview.ini
src/logreview/: __init__.py  _cmdlineapp.py  clean.py  errorcodes.py  impxl.py  load.py  unpack.py
src/testing_utilities/: testing_utilities.py
tests/: test_impxl.py  test_load.py  test_testing_utilities.py  test_unpack.py
tests/data/: AOLogs.tar  aAOLogs.tar
tests/data/mAOLogs/AOLogs/system/: sss
tests/data/mAOLogs/AOLogs/system/var_log_httpd_log/: ssl_error_log-20220412
tests/data/mAOLogs/backend/: completed_discovery_results.tgz
tests/data/mAOLogs/system/: df  phstatus  proc_cpuinfo  sa12  vmstat
tests/data/mAOLogs/system/var_log_httpd_log/: ssl_access_log
tests/data/tempLogs/1100299/AOLogs/backend/: phoenix.log-2022-04-12-1649750401
tests/data/tempLogs/1100299/AOLogs/system/: AO_VERSION  messages  ph-show-version.txt  sa11  top
tests/data/tempLogs/1100299/AOLogs/system/var_log_httpd_log/: ssl_error_log  ssl_request_log
