[metadata]
name = LogReview
version = '-0!0.2-'
description = A tool to extract and perform a prelimanary review of logs produced by the FortiSIEM application.
author = John Davenport
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    logreview
    testing_utilities
install_requires =
    pandas>=1.3.4
    openpyxl>=3.0.9
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0

